# forward-summarizer-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  bot.py  classifier.py  database.py  docker-compose.yaml  init_db.py  pyproject.toml  pytest.ini  schema.sql  summarizer.py  test_classifier.py  test_database.py  test_pipeline_integration.py  test_pipeline_verification.py  test_summarizer.py
